add colorful triangle

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </head>
 
   <body>
-    <canvas id="webgl"></canvas>
+    <div class="container">
+      <canvas id="webgl"></canvas> <input id="progress" type="range" />
+    </div>
+
     <script src="./dist/main.js"></script>
   </body>
 </html>
