--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <canvas id="webgl"></canvas>
+    <canvas id="webgl" width="640" height="480"></canvas>
     <script src="./dist/main.js"></script>
   </body>
 </html>
